--- a/assets/package.json
+++ b/assets/package.json
@@ -7,6 +7,9 @@
   },
   "dependencies": {
     "babel-preset-react": "^6.24.1",
+    "bootstrap": "^4.0.0",
+    "copycat-brunch": "^1.1.0",
+    "font-awesome": "^4.7.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "prop-types": "^15.6.1",
@@ -14,7 +17,8 @@
     "react-dom": "^16.3.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "sass-brunch": "^2.10.4"
   },
   "devDependencies": {
     "babel-brunch": "6.1.1",
